used for baseline setup

--- a/DACON/Carcarsh_video_classification/3dConv, Video classfication.ipynb
+++ b/DACON/Carcarsh_video_classification/3dConv, Video classfication.ipynb
@@ -38,7 +38,9 @@
     "\n",
     "import albumentations as A\n",
     "from albumentations.pytorch.transforms import ToTensorV2\n",
+    "from torchvision.ops import StochasticDepth, sigmoid_focal_loss\n",
     "import torchvision.models as models\n",
+    "from einops.layers.torch import Rearrange\n",
     "\n",
     "from tqdm.auto import tqdm\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -75,7 +77,7 @@
    "source": [
     "CFG = {\n",
     "    'VIDEO_LENGTH':50, # 10프레임 * 5초\n",
-    "    'IMG_SIZE':128,\n",
+    "    'IMG_SIZE':256,\n",
     "    'EPOCHS':10,\n",
     "    'LEARNING_RATE':3e-4,\n",
     "    'BATCH_SIZE':4,\n",
@@ -215,6 +217,187 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "270018aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SqueezeExcitation(nn.Module):\n",
+    "    def __init__(self, in_dim, sqz_dim) -> None:\n",
+    "        super(SqueezeExcitation, self).__init__()\n",
+    "\n",
+    "        self.pool = nn.AdaptiveAvgPool3d(output_size=1)\n",
+    "        self.fc1 = nn.Conv3d(in_dim, sqz_dim, kernel_size=1, stride=1)\n",
+    "        self.fc2 = nn.Conv3d(sqz_dim, in_dim, kernel_size=1, stride=1)\n",
+    "        self.act = nn.SiLU()\n",
+    "        self.scale_act = nn.Sigmoid()\n",
+    "\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        squeezed = self.pool(x)\n",
+    "\n",
+    "        e = self.fc1(squeezed)\n",
+    "        e = self.act(e)\n",
+    "        e = self.fc2(e)\n",
+    "        e = self.scale_act(e)\n",
+    "\n",
+    "        out = x * e\n",
+    "        \n",
+    "        return out\n",
+    "\n",
+    "class MBConv(nn.Module):\n",
+    "    def __init__(self, in_dim, hidden_dim, out_dim, kernel_size, stride, padding, scale=True) -> None:\n",
+    "        super(MBConv, self).__init__()\n",
+    "\n",
+    "        self.scale = scale\n",
+    "\n",
+    "        if self.scale:\n",
+    "            self.bottleneck = nn.Sequential(\n",
+    "                nn.Conv3d(in_dim, hidden_dim, kernel_size=1, stride=1, bias=False),\n",
+    "                nn.BatchNorm3d(hidden_dim),\n",
+    "                nn.SiLU()\n",
+    "            )\n",
+    "\n",
+    "            self.conv1 = nn.Sequential(\n",
+    "                nn.Conv3d(hidden_dim, hidden_dim, kernel_size=kernel_size, stride=stride, padding=padding, groups=hidden_dim, bias=False),\n",
+    "                nn.BatchNorm3d(hidden_dim),\n",
+    "                nn.SiLU()\n",
+    "            )\n",
+    "        else:\n",
+    "            self.conv1 = nn.Sequential(\n",
+    "                nn.Conv3d(in_dim, hidden_dim, kernel_size=kernel_size, stride=stride, padding=padding, groups=in_dim, bias=False),\n",
+    "                nn.BatchNorm3d(hidden_dim),\n",
+    "                nn.SiLU()\n",
+    "            )\n",
+    "        \n",
+    "        self.SqueezeExcitation = SqueezeExcitation(hidden_dim, 8 if hidden_dim == 32 else hidden_dim//24)\n",
+    "\n",
+    "        self.conv2 = nn.Sequential(\n",
+    "            nn.Conv3d(hidden_dim, out_dim, kernel_size=1, stride=1, bias=False),\n",
+    "            nn.BatchNorm3d(out_dim)\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        if self.scale:\n",
+    "            x = self.bottleneck(x)\n",
+    "            \n",
+    "        h = self.conv1(x)\n",
+    "        h = self.SqueezeExcitation(h)\n",
+    "        h = self.conv2(h)\n",
+    "\n",
+    "        return h\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "29cccc6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class efficientNet3D(nn.Module):\n",
+    "    def __init__(self, num_classes=13) -> None:\n",
+    "        super(efficientNet3D, self).__init__()\n",
+    "\n",
+    "        self.conv1 = nn.Sequential(\n",
+    "            nn.Conv3d(3, 32, kernel_size=3, stride=2, padding=1, bias=False),\n",
+    "            nn.BatchNorm3d(32),\n",
+    "            nn.SiLU()\n",
+    "        )\n",
+    "\n",
+    "        self.conv2 = nn.Sequential(\n",
+    "            MBConv(in_dim=32, hidden_dim=32, out_dim=16, kernel_size=3, stride=1, padding=1, scale=False),\n",
+    "            StochasticDepth(p=0.0, mode='row')\n",
+    "        )\n",
+    "\n",
+    "        self.conv3 = nn.Sequential(\n",
+    "            MBConv(in_dim=16, hidden_dim=96, out_dim=24, kernel_size=3, stride=2, padding=1, scale=True),\n",
+    "            StochasticDepth(p=0.0125, mode='row'),\n",
+    "            MBConv(in_dim=24, hidden_dim=144, out_dim=24, kernel_size=3, stride=1, padding=1, scale=True),\n",
+    "            StochasticDepth(p=0.025, mode='row')\n",
+    "        )\n",
+    "\n",
+    "        self.conv4 = nn.Sequential(\n",
+    "            MBConv(in_dim=24, hidden_dim=144, out_dim=40, kernel_size=5, stride=2, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.0375, mode='row'),\n",
+    "            MBConv(in_dim=40, hidden_dim=240, out_dim=40, kernel_size=5, stride=1, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.05, mode='row'),\n",
+    "        )\n",
+    "\n",
+    "        self.conv5 = nn.Sequential(\n",
+    "            MBConv(in_dim=40, hidden_dim=240, out_dim=80, kernel_size=3, stride=2, padding=1, scale=True),\n",
+    "            StochasticDepth(p=0.0625, mode='row'),\n",
+    "            MBConv(in_dim=80, hidden_dim=480, out_dim=80, kernel_size=3, stride=1, padding=1, scale=True),\n",
+    "            StochasticDepth(p=0.075, mode='row'),\n",
+    "            MBConv(in_dim=80, hidden_dim=480, out_dim=80, kernel_size=3, stride=1, padding=1, scale=True),\n",
+    "            StochasticDepth(p=0.0875, mode='row'),\n",
+    "        )\n",
+    "\n",
+    "        self.conv6 = nn.Sequential(\n",
+    "            MBConv(in_dim=80, hidden_dim=480, out_dim=112, kernel_size=5, stride=1, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.1, mode='row'),\n",
+    "            MBConv(in_dim=112, hidden_dim=672, out_dim=112, kernel_size=5, stride=1, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.1125, mode='row'),\n",
+    "            MBConv(in_dim=112, hidden_dim=672, out_dim=112, kernel_size=5, stride=1, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.125, mode='row'),\n",
+    "        )\n",
+    "\n",
+    "        self.conv7 = nn.Sequential(\n",
+    "            MBConv(in_dim=112, hidden_dim=672, out_dim=192, kernel_size=5, stride=2, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.1375, mode='row'),\n",
+    "            MBConv(in_dim=192, hidden_dim=1152, out_dim=192, kernel_size=5, stride=1, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.15, mode='row'),\n",
+    "            MBConv(in_dim=192, hidden_dim=1152, out_dim=192, kernel_size=5, stride=1, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.1625, mode='row'),\n",
+    "            MBConv(in_dim=192, hidden_dim=1152, out_dim=192, kernel_size=5, stride=1, padding=2, scale=True),\n",
+    "            StochasticDepth(p=0.175, mode='row'),\n",
+    "        )\n",
+    "\n",
+    "        self.conv8 = nn.Sequential(\n",
+    "            MBConv(in_dim=192, hidden_dim=1152, out_dim=320, kernel_size=3, stride=1, padding=1, scale=False),\n",
+    "            StochasticDepth(p=0.1875, mode='row')\n",
+    "        )\n",
+    "\n",
+    "        self.conv9 = nn.Sequential(\n",
+    "            nn.Conv3d(320, 1280, kernel_size=1, stride=1, bias=False),\n",
+    "            nn.BatchNorm3d(1280),\n",
+    "            nn.SiLU()\n",
+    "        )\n",
+    "\n",
+    "        self.pool = nn.AdaptiveAvgPool3d(output_size=1)\n",
+    "        self.drop = nn.Dropout(p=0.2)\n",
+    "        self.clf  = nn.Linear(1280, out_features=num_classes)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = self.conv3(x)\n",
+    "        x = self.conv4(x)\n",
+    "        x = self.conv5(x)\n",
+    "        x = self.conv6(x)\n",
+    "        x = self.conv7(x)\n",
+    "        x = self.conv8(x)\n",
+    "        x = self.conv9(x)\n",
+    "\n",
+    "        p = self.pool(x)\n",
+    "        # print(p.shape)\n",
+    "        # p = Rearrange(p, 'b ')\n",
+    "        # p = Rearrange(p, ' c t w h -> (c t w h)')\n",
+    "        p = p.view(x.shape[0], -1)\n",
+    "        # [4, 1280, 1, 1, 1]\n",
+    "\n",
+    "        out = self.clf(p)\n",
+    "\n",
+    "        return out\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "3664c4d0-f1f2-4971-9090-4d6ee66309ae",
    "metadata": {},
    "outputs": [],
@@ -222,30 +405,17 @@
     "class BaseModel(nn.Module):\n",
     "    def __init__(self, num_classes=13):\n",
     "        super(BaseModel, self).__init__()\n",
-    "        self.feature_extract = nn.Sequential(\n",
-    "            nn.Conv3d(3, 8, (1, 3, 3)),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(8),\n",
-    "            nn.MaxPool3d(2),\n",
-    "            nn.Conv3d(8, 32, (1, 2, 2)),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(32),\n",
-    "            nn.MaxPool3d(2),\n",
-    "            nn.Conv3d(32, 64, (1, 2, 2)),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(64),\n",
-    "            nn.MaxPool3d(2),\n",
-    "            nn.Conv3d(64, 128, (1, 2, 2)),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(128),\n",
-    "            nn.MaxPool3d((3, 7, 7)),\n",
-    "        )\n",
-    "        self.classifier = nn.Linear(1024, num_classes)\n",
+    "        self.feature_extract = models.video.r3d_18(weights=models.video.R3D_18_Weights.DEFAULT)\n",
+    "        self.drop = nn.Dropout(p=0.2)\n",
+    "        self.act  = nn.SiLU()\n",
+    "        self.classifier = nn.Linear(400, num_classes)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        batch_size = x.size(0)\n",
     "        x = self.feature_extract(x)\n",
-    "        x = x.view(batch_size, -1)\n",
+    "        # x = x.view(batch_size, -1)\n",
+    "        x = self.drop(x)\n",
+    "        x = self.act(x)\n",
     "        x = self.classifier(x)\n",
     "        return x"
    ]
@@ -260,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "a17df6b3-16c9-44dd-b0fd-ffb501fee749",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(model, optimizer, train_loader, val_loader, scheduler, device):\n",
     "    model.to(device)\n",
-    "    criterion = nn.CrossEntropyLoss().to(device)\n",
+    "    criterion = FocalLoss().to(device)\n",
     "    \n",
     "    best_val_score = 0\n",
     "    best_model = None\n",
@@ -305,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "24a0bf01-27cd-4faf-93b1-3aa8a37be01c",
    "metadata": {},
    "outputs": [],
@@ -336,6 +506,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c1e043b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FocalLoss(nn.Module):\n",
+    "    def __init__(self, alpha=0.25, gamma=2, logits=False, reduce=True):\n",
+    "        super(FocalLoss, self).__init__()\n",
+    "        self.alpha = alpha\n",
+    "        self.gamma = gamma\n",
+    "        self.logits = logits\n",
+    "        self.reduce = reduce\n",
+    "\n",
+    "    def forward(self, inputs, targets):\n",
+    "    \n",
+    "        ce_loss = nn.CrossEntropyLoss()(inputs, targets)\n",
+    "\n",
+    "        pt = torch.exp(-ce_loss)\n",
+    "        F_loss = self.alpha * (1-pt)**self.gamma * ce_loss\n",
+    "\n",
+    "        if self.reduce:\n",
+    "            return torch.mean(F_loss)\n",
+    "        else:\n",
+    "            return F_loss"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "51da39f9-904f-4abd-a7d2-cdf29c4a6c24",
    "metadata": {},
@@ -345,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "86142d9a-68b7-4d04-8423-49d28025411d",
    "metadata": {
     "tags": []
@@ -355,11 +553,72 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/540 [00:00<?, ?it/s]"
+      "100%|██████████| 540/540 [15:51<00:00,  1.76s/it]\n",
+      "100%|██████████| 135/135 [02:33<00:00,  1.14s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1], Train Loss : [0.11035] Val Loss : [0.07052] Val F1 : [0.17948]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 540/540 [16:42<00:00,  1.86s/it]\n",
+      "100%|██████████| 135/135 [02:30<00:00,  1.12s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2], Train Loss : [0.07768] Val Loss : [0.04551] Val F1 : [0.20748]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 540/540 [16:27<00:00,  1.83s/it]\n",
+      "100%|██████████| 135/135 [02:26<00:00,  1.09s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [3], Train Loss : [0.06246] Val Loss : [0.05001] Val F1 : [0.23219]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 540/540 [16:38<00:00,  1.85s/it]\n",
+      "100%|██████████| 135/135 [02:30<00:00,  1.12s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [4], Train Loss : [0.06206] Val Loss : [0.04530] Val F1 : [0.27475]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 61%|██████▏   | 331/540 [10:04<06:26,  1.85s/it]"
      ]
     }
    ],
    "source": [
+    "# model = efficientNet3D()\n",
     "model = BaseModel()\n",
     "model.eval()\n",
     "optimizer = torch.optim.Adam(params = model.parameters(), lr = CFG[\"LEARNING_RATE\"])\n",
@@ -423,22 +682,7 @@
    "execution_count": null,
    "id": "9fcce1a1-995c-403b-9229-f4253dd5c702",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2287680b003443aa23c26356eb35934",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/450 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = inference(model, test_loader, device)"
    ]
@@ -458,7 +702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submit = pd.read_csv('./sample_submission.csv')"
+    "submit = pd.read_csv('/root/Competitions/DACON/Carcarsh_video_classification/data/sample_submission.csv')"
    ]
   },
   {
@@ -466,76 +710,7 @@
    "execution_count": null,
    "id": "c7d82083-af35-4ba5-957d-1c7451404eab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sample_id</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>TEST_0000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>TEST_0001</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TEST_0002</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>TEST_0003</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>TEST_0004</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sample_id  label\n",
-       "0  TEST_0000      0\n",
-       "1  TEST_0001      0\n",
-       "2  TEST_0002      0\n",
-       "3  TEST_0003      0\n",
-       "4  TEST_0004      0"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "submit['label'] = preds\n",
     "submit.head()"
@@ -548,8 +723,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submit.to_csv('/root/Competitions/DACON/Carcarsh_video_classification/prediction/baseline_submit.csv', index=False)"
+    "submit.to_csv('/root/Competitions/DACON/Carcarsh_video_classification/prediction/efficientNet3d(x2 resolution)_submit.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2b11873",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
