--- a/DACON/Papering_clf/example/StratifiedKFold_pg.ipynb
+++ b/DACON/Papering_clf/example/StratifiedKFold_pg.ipynb
@@ -15,9 +15,16 @@
     "from torch.utils.data import DataLoader\n",
     "from sklearn.model_selection import KFold, StratifiedKFold\n",
     "\n",
-    "from data_loader import CustomDataset\n",
+    "# from data_loader import CustomDataset\n",
     "from sklearn import preprocessing"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -25,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_img_list = glob.glob('./aug_data/train/*/*')\n",
+    "all_img_list = glob.glob('../aug_data/train/*/*')\n",
     "df = pd.DataFrame(columns=['img_path', 'label'])\n",
     "df['img_path'] = all_img_list\n",
     "df['label'] = df['img_path'].apply(lambda x : str(x).split('/')[-2])\n",
@@ -41,7 +48,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['class 0', 'class 1', 'class 2', 'class 3']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     class 0       1.00      1.00      1.00         2\n",
+      "     class 1       0.00      0.00      0.00         2\n",
+      "     class 2       0.00      0.00      0.00         2\n",
+      "     class 3       0.00      0.00      0.00         1\n",
+      "\n",
+      "    accuracy                           0.29         7\n",
+      "   macro avg       0.25      0.25      0.25         7\n",
+      "weighted avg       0.29      0.29      0.29         7\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/paper/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/opt/conda/envs/paper/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/opt/conda/envs/paper/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "y_true = [0, 1, 2, 0, 1, 2, 3]\n",
+    "y_pred = [0, 2, 1, 0, 2, 1, 1]\n",
+    "\n",
+    "target_names = ['class 0', 'class 1', 'class 2', 'class 3']\n",
+    "# target_names = [f'cls {idx}' for idx in range(19)]\n",
+    "print(target_names)\n",
+    "\n",
+    "print(classification_report(y_true, y_pred, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['              precision    recall  f1-score   support', '', '      class0       1.00      0.67      0.80         3', '      class1       0.00      0.00      0.00         2', '      class2       0.00      0.00      0.00         2', '', '    accuracy                           0.29         7', '   macro avg       0.33      0.22      0.27         7', 'weighted avg       0.43      0.29      0.34         7', '']\n",
+      "10\n",
+      "\n",
+      "line content:               precision    recall  f1-score   support\n",
+      "line content: \n",
+      "line content:       class0       1.00      0.67      0.80         3\n",
+      "line content:       class1       0.00      0.00      0.00         2\n",
+      "line content:       class2       0.00      0.00      0.00         2\n",
+      "line content: \n",
+      "line content:     accuracy                           0.29         7\n",
+      "line content:    macro avg       0.33      0.22      0.27         7\n",
+      "line content: weighted avg       0.43      0.29      0.34         7\n",
+      "line content: \n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "y_true = [0, 1, 2, 0, 1, 2, 0]\n",
+    "y_pred = [0, 2, 1, 0, 2, 1, 1]\n",
+    "\n",
+    "target_names = ['class0', 'class1', 'class2']\n",
+    "\n",
+    "report = classification_report(y_true, y_pred, target_names=target_names)\n",
+    "report_lines = report.split('\\n')\n",
+    "\n",
+    "# 클래스별 지표 추출\n",
+    "metrics = {}\n",
+    "print(report_lines)\n",
+    "print(len(report_lines))\n",
+    "print()\n",
+    "for line in report_lines:\n",
+    "    print(f'line content: {line}')\n",
+    "    if not line and len(line) > 2:\n",
+    "        class_name, *class_metrics, support = line.split()\n",
+    "        print(f'cls name: {class_name}')\n",
+    "        print(f'class_metrics: {class_metrics}')\n",
+    "        print(f'support {support}')\n",
+    "    # metrics[class_name] = {\n",
+    "    #     'precision': float(class_metrics[0]),\n",
+    "    #     'recall': float(class_metrics[1]),\n",
+    "    #     'f1-score': float(class_metrics[2]),\n",
+    "    #     'support': int(support),\n",
+    "    # }\n",
+    "print('done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,29 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot set a row with mismatched columns",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m le \u001b[39m=\u001b[39m preprocessing\u001b[39m.\u001b[39mLabelEncoder()\n\u001b[1;32m      2\u001b[0m \u001b[39m# le.fit(df['label'])\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m train\u001b[39m.\u001b[39mloc[\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m le\u001b[39m.\u001b[39mfit_transform(train[\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m val[\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m le\u001b[39m.\u001b[39mtransform(val[\u001b[39m'\u001b[39m\u001b[39mlabel\u001b[39m\u001b[39m'\u001b[39m])\n",
-      "File \u001b[0;32m/opt/conda/envs/paper/lib/python3.10/site-packages/pandas/core/indexing.py:818\u001b[0m, in \u001b[0;36m_LocationIndexer.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m    815\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_valid_setitem_indexer(key)\n\u001b[1;32m    817\u001b[0m iloc \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39miloc\u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39miloc\n\u001b[0;32m--> 818\u001b[0m iloc\u001b[39m.\u001b[39;49m_setitem_with_indexer(indexer, value, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname)\n",
-      "File \u001b[0;32m/opt/conda/envs/paper/lib/python3.10/site-packages/pandas/core/indexing.py:1785\u001b[0m, in \u001b[0;36m_iLocIndexer._setitem_with_indexer\u001b[0;34m(self, indexer, value, name)\u001b[0m\n\u001b[1;32m   1782\u001b[0m     indexer, missing \u001b[39m=\u001b[39m convert_missing_indexer(indexer)\n\u001b[1;32m   1784\u001b[0m     \u001b[39mif\u001b[39;00m missing:\n\u001b[0;32m-> 1785\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_setitem_with_indexer_missing(indexer, value)\n\u001b[1;32m   1786\u001b[0m         \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m   1788\u001b[0m \u001b[39mif\u001b[39;00m name \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mloc\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m   1789\u001b[0m     \u001b[39m# must come after setting of missing\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/conda/envs/paper/lib/python3.10/site-packages/pandas/core/indexing.py:2160\u001b[0m, in \u001b[0;36m_iLocIndexer._setitem_with_indexer_missing\u001b[0;34m(self, indexer, value)\u001b[0m\n\u001b[1;32m   2157\u001b[0m     \u001b[39mif\u001b[39;00m is_list_like_indexer(value):\n\u001b[1;32m   2158\u001b[0m         \u001b[39m# must have conforming columns\u001b[39;00m\n\u001b[1;32m   2159\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(value) \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39mcolumns):\n\u001b[0;32m-> 2160\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mcannot set a row with mismatched columns\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   2162\u001b[0m     value \u001b[39m=\u001b[39m Series(value, index\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39mcolumns, name\u001b[39m=\u001b[39mindexer)\n\u001b[1;32m   2164\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj):\n\u001b[1;32m   2165\u001b[0m     \u001b[39m# We will ignore the existing dtypes instead of using\u001b[39;00m\n\u001b[1;32m   2166\u001b[0m     \u001b[39m#  internals.concat logic\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot set a row with mismatched columns"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -136,44 +229,192 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1663</th>\n",
-       "      <td>./aug_data/train/틈새과다/3.png</td>\n",
+       "      <th>0</th>\n",
+       "      <td>../aug_data/train/들뜸/24.png</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>../aug_data/train/들뜸/34.png</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>../aug_data/train/들뜸/25.png</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>../aug_data/train/들뜸/5.png</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>../aug_data/train/들뜸/8.png</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3615</th>\n",
+       "      <td>../aug_data/train/틈새과다/0.png</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1664</th>\n",
-       "      <td>./aug_data/train/틈새과다/2.png</td>\n",
+       "      <th>3616</th>\n",
+       "      <td>../aug_data/train/틈새과다/3.png</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1665</th>\n",
-       "      <td>./aug_data/train/틈새과다/0.png</td>\n",
+       "      <th>3617</th>\n",
+       "      <td>../aug_data/train/틈새과다/4.png</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1667</th>\n",
-       "      <td>./aug_data/train/틈새과다/1.png</td>\n",
+       "      <th>3618</th>\n",
+       "      <td>../aug_data/train/틈새과다/1.png</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3619</th>\n",
+       "      <td>../aug_data/train/틈새과다/2.png</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3620 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         img_path  label\n",
-       "1663  ./aug_data/train/틈새과다/3.png     16\n",
-       "1664  ./aug_data/train/틈새과다/2.png     16\n",
-       "1665  ./aug_data/train/틈새과다/0.png     16\n",
-       "1667  ./aug_data/train/틈새과다/1.png     16"
+       "                          img_path  label\n",
+       "0      ../aug_data/train/들뜸/24.png      5\n",
+       "1      ../aug_data/train/들뜸/34.png      5\n",
+       "2      ../aug_data/train/들뜸/25.png      5\n",
+       "3       ../aug_data/train/들뜸/5.png      5\n",
+       "4       ../aug_data/train/들뜸/8.png      5\n",
+       "...                            ...    ...\n",
+       "3615  ../aug_data/train/틈새과다/0.png     16\n",
+       "3616  ../aug_data/train/틈새과다/3.png     16\n",
+       "3617  ../aug_data/train/틈새과다/4.png     16\n",
+       "3618  ../aug_data/train/틈새과다/1.png     16\n",
+       "3619  ../aug_data/train/틈새과다/2.png     16\n",
+       "\n",
+       "[3620 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train[train.label == 16]"
+    "le = preprocessing.LabelEncoder()\n",
+    "df['label'] = le.fit_transform(df['label'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  12.,  317.,  187.,  219.,   21.,   57.,  107.,  134.,   28.,   60.,\n",
+       "         587.,  149.,   54.,   27.,   34.,  192.,    5.,   55., 1375.])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "torch.Tensor(df.label.value_counts().to_frame().sort_index().values).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LADELoss()"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LADELoss(19, df.label.value_counts().to_frame().sort_index().values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import functools\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
+    "# from utils import *\n",
+    "\n",
+    "\n",
+    "class LADELoss(nn.Module):\n",
+    "    def __init__(self, num_classes=10, prior=None, remine_lambda=0.1):\n",
+    "        super().__init__()\n",
+    "        if prior is not None:\n",
+    "            self.img_num_per_cls = torch.Tensor(prior).squeeze().cuda()\n",
+    "            self.prior = self.img_num_per_cls / self.img_num_per_cls.sum()\n",
+    "        else:\n",
+    "            self.prior = None\n",
+    "\n",
+    "        self.balanced_prior = torch.tensor(1. / num_classes).float().cuda()\n",
+    "        self.remine_lambda = remine_lambda\n",
+    "\n",
+    "        self.num_classes = num_classes\n",
+    "        self.cls_weight = (self.img_num_per_cls.float() / torch.sum(self.img_num_per_cls.float())).cuda()\n",
+    "\n",
+    "    def mine_lower_bound(self, x_p, x_q, num_samples_per_cls):\n",
+    "        N = x_p.size(-1)\n",
+    "        first_term = torch.sum(x_p, -1) / (num_samples_per_cls + 1e-8)\n",
+    "        second_term = torch.logsumexp(x_q, -1) - np.log(N)\n",
+    "\n",
+    "        return first_term - second_term, first_term, second_term\n",
+    "\n",
+    "    def remine_lower_bound(self, x_p, x_q, num_samples_per_cls):\n",
+    "        loss, first_term, second_term = self.mine_lower_bound(x_p, x_q, num_samples_per_cls)\n",
+    "        reg = (second_term ** 2) * self.remine_lambda\n",
+    "        return loss - reg, first_term, second_term\n",
+    "\n",
+    "    def forward(self, y_pred, target, q_pred=None):\n",
+    "        \"\"\"\n",
+    "        y_pred: N x C\n",
+    "        target: N\n",
+    "        \"\"\"\n",
+    "        per_cls_pred_spread = y_pred.T * (target == torch.arange(0, self.num_classes).view(-1, 1).type_as(target))  # C x N\n",
+    "        pred_spread = (y_pred - torch.log(self.prior + 1e-9) + torch.log(self.balanced_prior + 1e-9)).T  # C x N\n",
+    "\n",
+    "        num_samples_per_cls = torch.sum(target == torch.arange(0, self.num_classes).view(-1, 1).type_as(target), -1).float()  # C\n",
+    "        estim_loss, first_term, second_term = self.remine_lower_bound(per_cls_pred_spread, pred_spread, num_samples_per_cls)\n",
+    "\n",
+    "        loss = -torch.sum(estim_loss * self.cls_weight)\n",
+    "        return loss"
    ]
   },
   {
@@ -280,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
