--- a/DACON/Papering_clf/example/StratifiedKFold_pg.ipynb
+++ b/DACON/Papering_clf/example/StratifiedKFold_pg.ipynb
@@ -503,6 +503,83 @@
    "source": [
     "train_dataset = CustomDataset(train['img_path'].values, train['label'].values, train_transform_4_origin)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-05-08\n",
+      "2023-05-08 17:22:45.105022+09:00\n",
+      "2023-05-08\n",
+      "17:22:45\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n2021-02-15\\n2021-02-15 14:35:36.866411+09:00\\n2021-02-15\\n14:35:36\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date, datetime, timezone, timedelta\n",
+    "\n",
+    "exp_day = str(date.today())\n",
+    "\n",
+    "KST = timezone(timedelta(hours=9))\n",
+    "time_record = datetime.now(KST)\n",
+    "_day = str(time_record)[:10]\n",
+    "_time = str(time_record.time())[:8]\n",
+    "\n",
+    "print(exp_day) \n",
+    "print(datetime.now(KST))\n",
+    "print(_day)\n",
+    "print(_time) \n",
+    "\n",
+    "\"\"\"\n",
+    "2021-02-15\n",
+    "2021-02-15 14:35:36.866411+09:00\n",
+    "2021-02-15\n",
+    "14:35:36\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = datetime.now(KST)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-05-08 17:24:08.617042+09:00\n",
+      "0:00:06.908896\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(start)\n",
+    "print(datetime.now(KST) - start)"
+   ]
   }
  ],
  "metadata": {
